# CommunityDetection

./: .gitignore  README  README.md  build.sh  graphParser.py  header.tex  main.tex  social_net.bib  the_model.tex
SEA2015/: abstract.tex  appendix.tex  conclusion.tex  experimental.tex  header.tex  intro.tex  main.tex  nmi.tex  results.tex  setup.tex  the_model.tex
algorithm/: CMakeLists.txt  build.sh
algorithm/script/: community_detection_nonoverlapping_iterative.py
algorithm/src/: graph.cpp  graph.hpp  main.cpp  matrixBuilder.cpp  matrixBuilder.hpp  matrixSolver.cpp
algorithm/test/: main.cpp
benchmark/: benchmark.py  benchmark_nonOverlapping.py  benchmark_nonOverlapping.sh  benchmark_overlap.py  calculateMean.py  calculateNMI_nonOverlapping.py  job_array_foo.sh  job_array_nonoverlapping_iterative.sh  jsonmerger.py  makeallplots.sh  plots_for_theory_lunch.sh  plotter.py  plotter_overlap.py
benchmark/jobs/: all_jobs_for_the_paper.sh  job_array_overlap.sh  really_big_graph.sh
code/: CMakeLists.txt  Makefile  algorithm.cpp  classified_communities  communityClassifier.cpp  communityClassifier.h  communityClassifier.py  communityProcessor.cpp  community_classifier.py  graphParser.py  graphReader.cpp  graphReader.h  matrixBuilder.cpp  matrixBuilder.h  matrix_solver.cpp  overallPlan.tex  seedNode.cpp  seedNode.h
code/coverComparision/: usage.txt  usage.txt~
code/coverComparision/NMI/: gt2.txt  mutual
code/coverComparision/lfr benchmark/: benchmark  generator.py  generator_overlap.py
code/cppAlgorithm/: CMakeLists.txt  README  build.sh
code/cppAlgorithm/src/: communityProcessor.cpp  matrixSolver.cpp  matrixSolver.hpp
code/cppAlgorithm/test/: main.cpp
code/documentation/: header.tex  overallPlan.tex
code/src/: .main.cpp.swp  communityClassifier.cpp  communityClassifier.hpp  communityProcessor.hpp  graph.cpp  graph.hpp  main.cpp  matrixBuilder.cpp  matrixSolver.cpp  seedNode.cpp  seedNode.hpp
code/test/: main.cpp
code/test/data/: small_communities
code/test_graph/: classified_communities  vertex_communities
data/hiphop/: hiphop.communities  hiphop.communities~  hiphop.edges  hiphop.gml  hiphop.labels  hiphop_0.05.seed  hiphop_0.1.seed  hiphop_0.15.seed  hiphop_0.2.seed  hiphop_1.0.seed
paper/: Makefile  abstract.tex  conclusion.tex  experimental.tex  header.tex  intro.tex  main.tex  major_algorithms.tex  non_overlapping.tex  overlapping.tex  pipeline.tex  plots.tex  results.tex  setup.tex  social_net.bib  the_model.tex
scripts/: LFRtoNMI.py  LFRtoNMI.sh  LFRtoNMI_alg.sh  README  choice.py  communities.py  communityClassifier.py  communityDetectionIterative.py  communityutils.py  getNMI.sh  graph.py  graphParser.py  graphParserGlobalSampling.py  hiphopNMI.py  hiphopNMI.sh  hiphop_seed_generator.py  histogramplotter.py  math_tools.py  nonOverlaptester.py  quick_LFRtoNMI.sh
(+119 files in other folders)
